# automatic-computing-machine

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  deploy_test_pipeline.yml  pyproject.toml  requirements-api.txt  requirements-db.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt
analysis-books/: EXPERIMENTS-SPRINT-5.ipynb  FINAL_BOOK.ipynb  README.md  SPRINT-1.ipynb  SPRINT-2.ipynb  SPRINT-5.ipynb  SPRINT-6.ipynb  SRPINT-3.ipynb  SRPINT-4.ipynb  config_loader.py
docs/: README.md  SUGGESTIONS.md  testing.md
docs/Python_ML/finding_path/: tutorial.md
docs/Python_ML/libraries_used/: README.md
docs/Python_ML/working_with_datetimes/: README.md
docs/WindowsAdministration/WindowsServer/: AD_DS.md  CheckingTheDiskCapacity.md  FireWall.md  InstallChoco.md  PostgresSQL.md  SharedFolderHello.md
docs/client-server/: README.md
docs/cv/: English-CV-2025.md
docs/cv/2025/: English-CV-2025.md  Estonian-CV-2025.md  Russian-CV-2025.md
docs/deployment/: README.md
docs/finding_path/: README.md
docs/network-issues/: README.md
docs/reading/: README.md
docs/rust_auth/: README.md
shared/logs_shark/: debug_rust.pcapng
tests/: test_example.py
tomodachi_api/auth_rust/: Cargo.toml
tomodachi_api/auth_rust/docs/: README.md
tomodachi_api/auth_rust/docs/axum-server/: basics_of_axum.md  database.md
tomodachi_api/auth_rust/migrations/: 20250723014644_users.sql  20250723020659_add_role_to_users.sql  20250723055014_tokens.sql  20250808062950_remove_access_token.sql  20250812143429_add-password-to-user.sql
tomodachi_api/auth_rust/src/: lib.rs  main.rs
tomodachi_api/python_db/: lesson_1.py  lesson_2.py
tomodachi_api/rust-store/: Cargo.toml
tomodachi_core/common_types/: option.py  result.py  test_people.py  wind_data.py
tomodachi_core/config_development/: config.py
tomodachi_core/models/: __init__.py
tomodachi_core/models/demographic_salary_model/: demographic_salary_model.py
tomodachi_core/models/weather_impact_model/: __init__.py  forest_weather_impact_model.py  gradient_weather_impact_model.py  linear_weather_impact_model.py  tomodachi_model.py  weather_impact_model_semen.py  xgbost_weather_impact_model.py
tomodachi_core/server/: main.py  pandas_client.py  pandas_server.py
tomodachi_core/server/graphql_server/: server.py
tomodachi_core/server/grcp_server/: server.py
tomodachi_core/server/grcp_server/protos/: pandas.proto
tomodachi_core/testing/: __init__.py
tomodachi_core/testing/testdata/: invalid_data.py  invalid_employee.py  mockdata.py  valid_datatimes.py  valid_employee.py
tomodachi_core/testing/training_data/: bikeshare.csv  books.csv  stock_data_multiindex.json
tomodachi_core/tomodachi/: main.py
tomodachi_core/tomodachi/internals/: service.py
tomodachi_core/tomodachi/services/: __init__.py  datetime_service.py  high_low_profit_service.py  pandas_service.py  preprocess.py
tomodachi_core/tomodachi/tests/: test_example_inside.py
tomodachi_core/tomodachi/tests/date_changes/: test_date_change.py  test_datetimes.py
tomodachi_core/tomodachi/tests/has_duplicates/: test_having_duplicates.py
tomodachi_core/tomodachi/tests/high_low_service/: test_high_low_service.py
tomodachi_core/tomodachi/utils/: __init__.py  check_data.py  data_utils.py  high_low_analyzer.py  tools.py
tomodachi_labs/deno_labs/basics/: hello.ts  main.cpp
tomodachi_labs/deno_labs/consume_grcp_rust_hello/: client.ts  deno.json  home.ts
tomodachi_labs/deno_labs/greet_rust_axum/: main.ts
tomodachi_labs/kotlin_labs/: settings.gradle.kts
tomodachi_labs/kotlin_labs/app/: build.gradle.kts
tomodachi_labs/playground/: README.md
tomodachi_labs/playground/async_and_concurrent/: concurrent_future.ipynb
tomodachi_labs/playground/common/: env_config_locator.py  load_python_module.py  manual_config_import.py  shared_env_setup.py  use_sys_path_append.py
tomodachi_labs/playground/dsa_library_testing/: test_dsa.ipynb
tomodachi_labs/playground/importing/: learning_imports.ipynb
tomodachi_labs/playground/pandas_playground/: pandas_high_low_service.ipynb  pandas_loc_usage.ipynb
tomodachi_labs/playground/sklearn_models/: linear_regression.ipynb  sklearn_wind_power.ipynb  weather_condition_importances.csv
tomodachi_labs/playground/using_dates/: play_with_dates.ipynb
tomodachi_labs/python_labs/consume_rust_grcp/: client.py
tomodachi_labs/python_labs/print_one_billion/: bench.py  count_to_billion.py  main.py  test_count_to_billion.py
tomodachi_labs/rust_labs/async_example/: Cargo.toml
tomodachi_labs/rust_labs/axum_trial/: Cargo.toml
tomodachi_labs/rust_labs/count_billion/: Cargo.toml
tomodachi_labs/rust_labs/jwt-learn/: Cargo.toml
tomodachi_labs/rust_labs/jwt-learn/db/: users.json
tomodachi_labs/rust_labs/jwt-learn/src/: main.rs
tomodachi_labs/rust_labs/tonic-example/: Cargo.toml  build.rs
tomodachi_labs/rust_labs/tonic-example/certifications/: localhost.cnf
tomodachi_labs/rust_labs/tonic-example/src/: client.rs  main.rs
tomodachi_labs/zig_labs/basics/: main.zig
tomodachi_labs/zig_labs/count_billion/: main.zig
tomodachi_labs/zig_labs/hello_world_fetching/: main.zig
tomodachi_labs/zig_labs/runs_cpp/: hello
tomodachi_scripts/: run_server.sh  run_tests.lua  run_unittests.sh  test_example.sh
tomodachi_scripts/cleanup_pycache/: clean_up_cache.ps1  clean_up_cache.sh
tomodachi_scripts/install_dep/: get_depedencies.ps1  install_dependencies.sh
tomodachi_scripts/playground/: try_manual_config_import.sh  two_sum.lua  two_sum.zig
tomodachi_scripts/scripts/: example.lua  increment_version.lua
tomodachi_ui/tomodachi_front_end/: package-lock.json  package.json
tomodachi_ui/tomodachi_front_end/app/: layout.tsx  page.tsx
tomodachi_ui/tomodachi_front_end/common_types/: navProps.ts  wind_data.ts
tomodachi_ui/tomodachi_front_end/components/: AuthForm.tsx  baseForm.tsx  navbar.tsx  predictionForm.tsx
tomodachi_ui/tomodachi_front_end/prisma/: schema.prisma
tomodachi_ui/tomodachi_front_end_client/app_client/: advanced_types.ts  more_features.ts
(+44 files in other folders)
