[package]
name = "auth_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
axum = "0.7"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
futures-util = "0.3.31"
bcrypt = "0.15"
jsonwebtoken = "9.0"

# My scripts
[[bin]] 
name = "create-admin"
path = "src/bin/create_admin.rs" 

[[bin]] 
name = "read-users"
path = "src/bin/read_users.rs" 

[[bin]]
name = "server"
path = "src/main.rs"