[package]
name = "jwt-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
# The primary library for creating, signing, and verifying JSON Web Tokens
jsonwebtoken = "9.0"

# A robust crate for handling time, which is essential for token expiration (exp)
# and issuance (iat) claims. It also makes working with dates and times much easier
# than Rust's standard library.
chrono = "0.4"

# A highly flexible serialization framework. This is crucial for converting your Rust structs
# (like your JWT claims) to and from JSON, which jsonwebtoken relies on.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# dotenvy is used to load environment variables from a .env file.
dotenvy = "0.15"

# bcrypt is used for hashing passwords securely.
bcrypt = "0.15"